--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "vite-template-solid",
-  "version": "0.0.0",
+  "name": "svg-diff-editor",
+  "version": "0.0.1",
   "description": "",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "serve": "vite preview"
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^18.11.3",
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
@@ -17,6 +18,7 @@
     "vite-plugin-solid": "^2.3.0"
   },
   "dependencies": {
+    "@thisbeyond/solid-dnd": "^0.7.2",
     "solid-js": "^1.5.1"
   }
 }
